Thu Dec 13 11:36:26 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* configure.ac (AM_GNU_GETTEXT_VERSION): Upgrade to gettext 0.17.
	* gnulib: Upgrade to Debian 20071201+dfsg-1.
	* README (Copyright and licensing): New section. Explain the
	  implications of Gnulib components being distributed under GPL v3.
	* .bzrignore: Ignore gnulib/lib/fcntl.h.

Mon Nov 26 08:37:30 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* docs/HACKING (Utility functions to use): Rename to ...
	  (Facilities and portability): ... this. Add comments on Gnulib and
	  C89/C99.

Sun Nov 25 21:11:34 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* docs/HACKING (Revision control): Add advice on docs/ChangeLog
	  practice in branches.

Sun Nov 25 21:01:22 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (get_roff_encoding): Just use the fallback
	  encoding if device is NULL, rather than crashing. Bug reported by
	  Ivan Shmakov.

Sun Nov 25 18:51:16 GMT 2007  Ivan Shmakov  <oneingray@gmail.com>

	* man/Rules.man: replace.sed lives in $(top_builddir)/man, not
	  $(top_srcdir)/man.

Sat Nov 24 10:45:50 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (make_roff_command): If the environment variable
	  MANROFFOPT is set, append its contents to the *roff command line
	  (thanks, Ivan Shmakov; Debian bug #451187).
	* man/man1/man.man1 (ENVIRONMENT): Document MANROFFOPT.
	* docs/NEWS: Document this.

Mon Nov 19 19:41:18 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* configure.ac (AM_INIT_AUTOMAKE): Require Automake 1.10. Ming Hua
	  reported that Automake 1.9 doesn't have the MKDIR_P feature we
	  depend on.

Tue Nov 13 22:10:51 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* src/whatis.c (use_grep, do_whatis, word_fnmatch, search, main):
	  Rename regex to regex_opt, as Solaris' <libgen.h> defines a regex
	  function (thanks to the Nexenta developers).

Mon Nov 12 19:24:00 GMT 2007  Colin Watson  <cjwatson@debian.org>
