@@ -1,5 +1,7 @@
 #! /bin/sh -e
 
-gnulib-tool --update >/dev/null
-patch -s -p0 < gnulib/lib/xmalloc.patch
+if type gnulib-tool >/dev/null 2>&1; then
+	gnulib-tool --update >/dev/null
+	patch -s -p0 < gnulib/lib/xmalloc.patch
+fi
 autoreconf -i "$@"
