@@ -1,3 +1,8 @@
+Thu Dec 13 17:20:51 GMT 2007  Colin Watson  <cjwatson@debian.org>
+
+	* autogen.sh: Permit gnulib-tool to be missing; in that case, just
+	  run autoreconf.
+
 Thu Dec 13 11:36:26 GMT 2007  Colin Watson  <cjwatson@debian.org>
 
 	* configure.ac (AM_GNU_GETTEXT_VERSION): Upgrade to gettext 0.17.
